Add: Crossfade working as discrete.
This means only working as changing "scenes"
(i.e., silence, hh, kk, hh+kk)

--- a/index.html
+++ b/index.html
@@ -75,6 +75,15 @@
                 </div>
             </div>
 
+            <div id="box3">
+                <div id="boxback"><a href="crossfade.html"><img alt="Crossfade" src="images/aside-image2.jpg"/></a></p>
+                <hgroup>
+                <h3>Crossfade</h3>
+                </hgroup>
+                <p id="boxed" align="left">Example to crossfade audios.</p>
+                </div>
+            </div>
+
             <div class="clear"> </div>
 
         </section>
