Fix: Better naming.

--- a/audio-swap.html
+++ b/audio-swap.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head><link rel="stylesheet" type="text/css" href="examples.css" media="all" />
-    <title>FMOD Examples - Event Parameter</title>
+    <title>FMOD Examples - Audio Swap</title>
 </head>
 
 <body>
@@ -15,7 +15,7 @@
         <a href = "index.html"><- Return to menu</a>
         <br/>
         <br/>
-        <strong>Event Parameter</strong><br/>
+        <strong>Audio swap</strong><br/>
         Copyright (c) Firelight Technologies 2018-2021.  For help using FMOD please visit <a href="http://www.fmod.com">http://www.fmod.com/</a><br/>
         Open browser debug console to see error messages and example logging output<br/>
         <br/>
@@ -23,12 +23,12 @@
         <br/>
         <br/>
         <form>
-            <label for="surfaceparameter">Surface Parameter Value</label>
+            <label for="surfaceparameter">Swap audios</label>
             <input id="surfaceparameter" type="range" min="0" max="3" step="1" value="1" oninput="paramChanged(this.value)" disabled>
             <output for="surfaceparameter" id="surfaceparameter_out">1</output>
         </form>
         <br/>        
-        0 = carpet, 1 = short grass, 2 = wood, 3 = silent</br>
+        0 = silence, 1 = hh, 2 = kk, 3 = hh + kk</br>
         <br/>
 
         <button id="playButton" onclick="playEvent();" disabled>Play event</button>
@@ -41,7 +41,7 @@
     </div>
 
     <script type="text/javascript" src="fmodstudio.js"></script>
-    <script type="text/javascript" src="crossfade.js"></script>
+    <script type="text/javascript" src="audio-swap.js"></script>
 
 </body>
 </html>
