--- a/index.html
+++ b/index.html
@@ -66,12 +66,21 @@
             </div>
             <div class="clear"> </div>
 
-            <div id="box3">
+            <div id="box1">
                 <div id="boxback"><a href="programmer_sound.html"><img alt="Programmer Sound" src="images/aside-image2.jpg"/></a></p>
                 <hgroup>
                 <h3>Programmer Sound</h3>
                 </hgroup>
                 <p id="boxed" align="left">This example demonstrates how to implement the programmer sound callback to play an event that has a programmer specified sound.</p>
+                </div>
+            </div>
+
+            <div id="box2">
+                <div id="boxback"><a href="audio-swap.html"><img alt="Audio swap" src="images/aside-image2.jpg"/></a></p>
+                <hgroup>
+                <h3>Audio Swapping</h3>
+                </hgroup>
+                <p id="boxed" align="left">Example to swap audios.</p>
                 </div>
             </div>
 
