WIP: Visualize mobile device orientation.

--- a/crossfade.html
+++ b/crossfade.html
@@ -32,6 +32,7 @@
         <br/>
 
         <button id="playButton" onclick="playEvent();" disabled>Play event</button>
+        <p id="orientationData">Orientation data</p>
 
         <div class = "bottominfo">
             <output id="display_out">Please wait... Loading...</output><br/>
@@ -42,6 +43,7 @@
 
     <script type="text/javascript" src="fmodstudio.js"></script>
     <script type="text/javascript" src="crossfade.js"></script>
+    <!-- <script type="text/javascript" src="extras.js"></script> -->
 
 </body>
 </html>
