--- a/crossfade.html
+++ b/crossfade.html
@@ -44,6 +44,7 @@
 
         <button id="playButton" onclick="playEvent();" disabled>Play event</button>
         <p id="orientationData">Orientation data</p>
+        <p id="screenConsole"></div>
 
         <div class = "bottominfo">
             <output id="display_out">Please wait... Loading...</output><br/>
@@ -52,9 +53,11 @@
         </div>
     </div>
 
+    
+
     <script type="text/javascript" src="fmodstudio.js"></script>
     <script type="text/javascript" src="crossfade.js"></script>
-    <!-- <script type="text/javascript" src="extras.js"></script> -->
+    <script type="text/javascript" src="crossfade-extras.js"></script>
 
 </body>
 </html>
